--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
+  animated_splash_screen: ^1.3.0
+  firebase_auth: ^4.2.10
+  uuid: ^3.0.7
+  cloud_firestore: ^4.4.4
+  loading_animation_widget: ^1.2.0+4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
