--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^4.4.4
   loading_animation_widget: ^1.2.0+4
   flutter_spinkit: ^5.1.0
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
